--- a/cardProj/view/Create.storyboard
+++ b/cardProj/view/Create.storyboard
@@ -11,7 +11,7 @@
         <!--CreateVC-->
         <scene sceneID="s0d-6b-0kx">
             <objects>
-                <viewController id="Y6W-OH-hqX" customClass="CreateVC" customModule="cardProj" customModuleProvider="target" sceneMemberID="viewController">
+                <viewController storyboardIdentifier="CreateVC" id="Y6W-OH-hqX" customClass="CreateVC" customModule="cardProj" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="5EZ-qb-Rvc">
                         <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
@@ -36,7 +36,7 @@
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                 <state key="normal" title="Create"/>
                                 <connections>
-                                    <action selector="createCard:" destination="Y6W-OH-hqX" eventType="touchUpInside" id="Wfe-IZ-khj"/>
+                                    <action selector="createCard:" destination="Y6W-OH-hqX" eventType="touchUpInside" id="8FE-rV-0BC"/>
                                 </connections>
                             </button>
                         </subviews>
@@ -44,14 +44,13 @@
                         <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                     </view>
                     <connections>
-                        <outlet property="createButton" destination="Foy-8G-YZ6" id="Odn-tR-RKf"/>
                         <outlet property="descriptionField" destination="7kA-IY-9Eb" id="Lcp-jT-aOE"/>
                         <outlet property="headlineField" destination="tpC-ER-3MK" id="1bq-0I-ewz"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="Ief-a0-LHa" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="88" y="34"/>
+            <point key="canvasLocation" x="86.956521739130437" y="33.482142857142854"/>
         </scene>
     </scenes>
     <resources>
