--- a/cardProj/view/Main.storyboard
+++ b/cardProj/view/Main.storyboard
@@ -20,19 +20,20 @@
                                 <rect key="frame" x="0.0" y="44" width="414" height="818"/>
                                 <subviews>
                                     <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" spacing="46" translatesAutoresizingMaskIntoConstraints="NO" id="1cd-Sg-0te">
-                                        <rect key="frame" x="0.0" y="0.0" width="414" height="439"/>
+                                        <rect key="frame" x="0.0" y="0.0" width="414" height="407"/>
                                         <subviews>
-                                            <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" distribution="fillEqually" translatesAutoresizingMaskIntoConstraints="NO" id="5qw-mk-Mm0">
-                                                <rect key="frame" x="0.0" y="0.0" width="414" height="166"/>
+                                            <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" distribution="fillEqually" spacing="18" translatesAutoresizingMaskIntoConstraints="NO" id="5qw-mk-Mm0">
+                                                <rect key="frame" x="0.0" y="0.0" width="414" height="202"/>
                                                 <subviews>
                                                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="gRf-VD-Jxf" userLabel="error">
                                                         <rect key="frame" x="20" y="8" width="374" height="50"/>
-                                                        <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                                        <edgeInsets key="layoutMargins" top="8" left="16" bottom="8" right="16"/>
+                                                        <fontDescription key="fontDescription" type="system" pointSize="12"/>
                                                         <nil key="textColor"/>
                                                         <nil key="highlightedColor"/>
                                                     </label>
                                                     <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Username" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="2L5-Gn-UdO">
-                                                        <rect key="frame" x="20" y="58" width="374" height="50"/>
+                                                        <rect key="frame" x="20" y="76" width="374" height="50"/>
                                                         <constraints>
                                                             <constraint firstAttribute="height" constant="50" id="icm-1b-J9Y"/>
                                                         </constraints>
@@ -40,50 +41,62 @@
                                                         <textInputTraits key="textInputTraits"/>
                                                     </textField>
                                                     <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="email" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="jLo-XK-bne">
-                                                        <rect key="frame" x="20" y="108" width="374" height="50"/>
+                                                        <rect key="frame" x="20" y="144" width="374" height="50"/>
                                                         <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                                         <textInputTraits key="textInputTraits"/>
                                                     </textField>
                                                 </subviews>
                                                 <edgeInsets key="layoutMargins" top="8" left="20" bottom="8" right="20"/>
                                             </stackView>
-                                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="jc2-89-6NX">
-                                                <rect key="frame" x="0.0" y="212" width="414" height="45"/>
-                                                <constraints>
-                                                    <constraint firstAttribute="height" constant="45" id="Mb8-7d-IUp"/>
-                                                    <constraint firstAttribute="height" relation="greaterThanOrEqual" constant="35" id="Qwb-gw-Tdw"/>
-                                                </constraints>
-                                                <state key="normal" title="Sign In"/>
-                                                <connections>
-                                                    <action selector="signIn:" destination="Y6W-OH-hqX" eventType="touchUpInside" id="H6W-xo-sgn"/>
-                                                </connections>
-                                            </button>
-                                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="UMG-0Y-6g8">
-                                                <rect key="frame" x="0.0" y="303" width="414" height="45"/>
-                                                <constraints>
-                                                    <constraint firstAttribute="height" constant="45" id="OB5-Ub-JRz"/>
-                                                    <constraint firstAttribute="height" relation="greaterThanOrEqual" constant="35" id="l0a-5s-Cc1"/>
-                                                </constraints>
-                                                <state key="normal" title="Sign Up"/>
-                                                <connections>
-                                                    <action selector="signUp:" destination="Y6W-OH-hqX" eventType="touchUpInside" id="7fi-f3-ah0"/>
-                                                </connections>
-                                            </button>
-                                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="qOv-22-mOe">
-                                                <rect key="frame" x="0.0" y="394" width="414" height="45"/>
-                                                <constraints>
-                                                    <constraint firstAttribute="height" constant="45" id="4us-g8-2Wc"/>
-                                                    <constraint firstAttribute="height" relation="greaterThanOrEqual" constant="35" id="JKz-lM-XSw"/>
-                                                </constraints>
-                                                <state key="normal" title="Guest"/>
-                                                <connections>
-                                                    <action selector="guest:" destination="Y6W-OH-hqX" eventType="touchUpInside" id="neX-Q3-ngT"/>
-                                                </connections>
-                                            </button>
+                                            <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" alignment="center" spacing="12" translatesAutoresizingMaskIntoConstraints="NO" id="f2Y-t0-6If">
+                                                <rect key="frame" x="0.0" y="248" width="414" height="159"/>
+                                                <subviews>
+                                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="jc2-89-6NX">
+                                                        <rect key="frame" x="183.5" y="0.0" width="47" height="45"/>
+                                                        <color key="backgroundColor" red="0.96848052740000001" green="0.95370278600000002" blue="0.52619146819999996" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
+                                                        <constraints>
+                                                            <constraint firstAttribute="height" constant="45" id="Mb8-7d-IUp"/>
+                                                            <constraint firstAttribute="height" relation="greaterThanOrEqual" constant="35" id="Qwb-gw-Tdw"/>
+                                                        </constraints>
+                                                        <edgeInsets key="layoutMargins" top="8" left="30" bottom="8" right="30"/>
+                                                        <state key="normal" title="Sign In"/>
+                                                        <connections>
+                                                            <action selector="signIn:" destination="Y6W-OH-hqX" eventType="touchUpInside" id="H6W-xo-sgn"/>
+                                                        </connections>
+                                                    </button>
+                                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="UMG-0Y-6g8">
+                                                        <rect key="frame" x="180" y="57" width="54" height="45"/>
+                                                        <color key="backgroundColor" red="0.96848052740000001" green="0.95370278600000002" blue="0.52619146819999996" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
+                                                        <constraints>
+                                                            <constraint firstAttribute="height" constant="45" id="OB5-Ub-JRz"/>
+                                                            <constraint firstAttribute="height" relation="greaterThanOrEqual" constant="35" id="l0a-5s-Cc1"/>
+                                                        </constraints>
+                                                        <edgeInsets key="layoutMargins" top="8" left="30" bottom="8" right="30"/>
+                                                        <state key="normal" title="Sign Up"/>
+                                                        <connections>
+                                                            <action selector="signUp:" destination="Y6W-OH-hqX" eventType="touchUpInside" id="7fi-f3-ah0"/>
+                                                        </connections>
+                                                    </button>
+                                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="qOv-22-mOe">
+                                                        <rect key="frame" x="186.5" y="114" width="41" height="45"/>
+                                                        <color key="backgroundColor" red="0.96848052740000001" green="0.95370278600000002" blue="0.52619146819999996" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
+                                                        <constraints>
+                                                            <constraint firstAttribute="height" constant="45" id="4us-g8-2Wc"/>
+                                                            <constraint firstAttribute="height" relation="greaterThanOrEqual" constant="35" id="JKz-lM-XSw"/>
+                                                        </constraints>
+                                                        <edgeInsets key="layoutMargins" top="8" left="30" bottom="8" right="30"/>
+                                                        <state key="normal" title="Guest"/>
+                                                        <connections>
+                                                            <action selector="guest:" destination="Y6W-OH-hqX" eventType="touchUpInside" id="neX-Q3-ngT"/>
+                                                        </connections>
+                                                    </button>
+                                                </subviews>
+                                                <rect key="contentStretch" x="1" y="0.0" width="1" height="1"/>
+                                            </stackView>
                                         </subviews>
                                     </stackView>
                                     <view contentMode="scaleToFill" verticalHuggingPriority="249" translatesAutoresizingMaskIntoConstraints="NO" id="9r8-I5-31x">
-                                        <rect key="frame" x="0.0" y="447" width="414" height="371"/>
+                                        <rect key="frame" x="0.0" y="415" width="414" height="403"/>
                                         <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                                     </view>
                                 </subviews>
